--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
   <nav>
     <a href="index">Promoções</a>
-    <a href="cupom">Cupom de Desconto</a>
+    <a href="cupom">Cupons de Descontos</a>
     <a href="sobre">Sobre</a>
     <a href="contato">Contato</a>
   </nav>
