--- a/index.html
+++ b/index.html
@@ -1,311 +1,157 @@
 <!DOCTYPE html>
-
 <html lang="pt-BR">
-
 <head>
-
-  <meta name="google-adsense-account" content="ca-pub-4531749081462125">
-
-  <meta name="twitter:card" content="summary_large_image">
-
-  <title>Centro de Compras - Ofertas do Dia</title>
-
-  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4531749081462125" crossorigin="anonymous"></script>
-
-  <link rel="preload" href="logos/logoscentrodecompras.jpeg" as="image">
-
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet" media="print" onload="this.media='all'">
-
-  <link rel="stylesheet" href="style.css" media="print" onload="this.media='all'">
-
-  <link rel="icon" type="image/x-icon" href="/favicon.ico"> <!-- Adicionado para corrigir erro 404 -->
-
-  <link rel="icon" type="image/png" sizes="32x32" href="logos/favicon-32x32.png">
-
-  <link rel="icon" type="image/png" sizes="16x16" href="logos/favicon-16x16.png">
-
-  <link rel="apple-touch-icon" sizes="180x180" href="logos/apple-touch-icon.png">
-
-  <link rel="manifest" href="logos/site.webmanifest">
-
+  <meta name="google-adsense-account" content="ca-pub-4531749081462125">
+  <meta name="twitter:card" content="summary_large_image">
+  <title>Centro de Compras - Ofertas do Dia</title>
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4531749081462125" crossorigin="anonymous"></script>
+  <link rel="preload" href="logos/logoscentrodecompras.jpeg" as="image">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet" media="print" onload="this.media='all'">
+  <link rel="stylesheet" href="style.css" media="print" onload="this.media='all'">
+  <link rel="icon" type="image/x-icon" href="/favicon.ico"> <!-- Adicionado para corrigir erro 404 -->
+  <link rel="icon" type="image/png" sizes="32x32" href="logos/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="logos/favicon-16x16.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="logos/apple-touch-icon.png">
+  <link rel="manifest" href="logos/site.webmanifest">
 </head>
-
 <body>
-
-  <header class="site-header">
-
-    <div class="logo-container">
-
-      <a href="index.html">
-
-        <img src="logos/logoscentrodecompras.jpeg" alt="Centro de Compras" id="site-logo-img" width="150" height="50">
-
-      </a>
-
-    </div>
-
-    <div class="header-text">
-
-      <h1>Centro de Compra</h1>
-
-      <p>O maior portal de compras do Brasil! Encontre as melhores ofertas.</p>
-
-    </div>
-
-  </header>
-
-
-
-  <nav>
-
-    <a href="index">Promoções</a>
-
-    <a href="cupom">Cupons de Descontos</a>
-
-    <a href="sobre">Sobre</a>
-
-    <a href="contato">Contato</a>
-
-  </nav>
-
-
-
-  <div class="container">
-
-    <aside class="sidebar">
-
-      <h3>Categorias</h3>
-
-      <ul>
-
-        <li class="categoria-item ativa" data-categoria="todas" onclick="filtrarPorCategoria('todas')"><i class="fas fa-list mr-2"></i>Todas</li>
-
-        <li class="categoria-item" data-categoria="eletronicos" onclick="filtrarPorCategoria('eletronicos')"><i class="fas fa-laptop mr-2"></i>Eletrônicos</li>
-
-        <li class="categoria-item" data-categoria="moda" onclick="filtrarPorCategoria('moda')"><i class="fas fa-tshirt mr-2"></i>Moda</li>
-
-        <li class="categoria-item" data-categoria="fitness" onclick="filtrarPorCategoria('fitness')"><i class="fas fa-dumbbell mr-2"></i>Fitness</li>
-
-        <li class="categoria-item" data-categoria="casa" onclick="filtrarPorCategoria('casa')"><i class="fas fa-home mr-2"></i>Casa</li>
-
-        <li class="categoria-item" data-categoria="beleza" onclick="filtrarPorCategoria('beleza')"><i class="fas fa-magic mr-2"></i>Beleza</li>
-
-        <li class="categoria-item" data-categoria="esportes" onclick="filtrarPorCategoria('esportes')"><i class="fas fa-futbol mr-2"></i>Esportes</li>
-
-        <li class="categoria-item" data-categoria="livros" onclick="filtrarPorCategoria('livros')"><i class="fas fa-book mr-2"></i>Livros</li>
-
-        <li class="categoria-item" data-categoria="infantil" onclick="filtrarPorCategoria('infantil')"><i class="fas fa-baby mr-2"></i>Infantil</li>
-
-        <li class="categoria-item" data-categoria="celulares" onclick="filtrarPorCategoria('celulares')"><i class="fas fa-mobile-alt mr-2"></i>Celulares</li>
-
-        <li class="categoria-item" data-categoria="eletrodomesticos" onclick="filtrarPorCategoria('eletrodomesticos')"><i class="fas fa-blender mr-2"></i>Eletrodomésticos</li>
-
-        <li class="categoria-item" data-categoria="pet" onclick="filtrarPorCategoria('pet')"><i class="fas fa-paw mr-2"></i>Pet</li>
-
-        <li class="categoria-item" data-categoria="jardinagem" onclick="filtrarPorCategoria('jardinagem')"><i class="fas fa-leaf mr-2"></i>Jardinagem</li>
-
-        <li class="categoria-item" data-categoria="automotivo" onclick="filtrarPorCategoria('automotivo')"><i class="fas fa-car mr-2"></i>Automotivo</li>
-
-        <li class="categoria-item" data-categoria="gastronomia" onclick="filtrarPorCategoria('gastronomia')"><i class="fas fa-utensils mr-2"></i>Gastronomia</li>
-
-        <li class="categoria-item" data-categoria="games" onclick="filtrarPorCategoria('games')"><i class="fas fa-gamepad mr-2"></i>Games</li>
-
-      </ul>
-
-    </aside>
-
-
-
-<main>
-
-  <section>
-
-    <h2> Ofertas do Dia</h2>
-
-    <ins class="adsbygoogle"
-
-         style="display:inline-block;width:728px;height:90px"
-
-         data-ad-client="ca-pub-4531749081462125"
-
-         data-ad-slot="5690664546"></ins>
-
-    <script>
-
-         (adsbygoogle = window.adsbygoogle || []).push({});
-
-    </script>
-
-    <div class="lojas-parceiras">
-
-      <h3> Lojas Parceiras</h3>
-
-      <div class="grid-lojas">
-
-        <div class="loja-todas ativa" onclick="filtrarPorLoja('todas')"><span>Todas as Lojas</span></div>
-
-        <div class="loja" data-loja="amazon" onclick="filtrarPorLoja('amazon')">
-
-          <img src="logos/amazon.png" alt="Amazon" loading="lazy" width="100" height="40"><span>Amazon</span>
-
-        </div>
-
-        <div class="loja" data-loja="magalu" onclick="filtrarPorLoja('magalu')">
-
-          <img src="logos/magalu.png" alt="Magalu" loading="lazy" width="100" height="40"><span>Magalu</span>
-
-        </div>
-
-        <div class="loja" data-loja="shein" onclick="filtrarPorLoja('shein')">
-
-          <img src="logos/shein.png" alt="Shein" loading="lazy" width="100" height="40"><span>Shein</span>
-
-        </div>
-
-        <div class="loja" data-loja="shopee" onclick="filtrarPorLoja('shopee')">
-
-          <img src="logos/shopee.png" alt="Shopee" loading="lazy" width="100" height="40"><span>Shopee</span>
-
-        </div>
-
-        <div class="loja" data-loja="mercadolivre" onclick="filtrarPorLoja('mercadolivre')">
-
-          <img src="logos/mercadolivre.jpg" alt="Mercado Livre" loading="lazy" width="100" height="40"><span>Mercado Livre</span>
-
-        </div>
-
-        <div class="loja" data-loja="alibaba" onclick="filtrarPorLoja('alibaba')">
-
-          <img src="logos/alibaba.png" alt="Alibaba" loading="lazy" width="100" height="40"><span>Alibaba</span>
-
-        </div>
-
-      </div>
-
-    </div>
-
-    <input type="text" id="busca" placeholder="Busque por produtos..." class="barra-busca">
-
-    <div id="busca-feedback" class="busca-feedback"></div>
-
-    <div class="loading-spinner" id="loading-spinner"></div>
-
-    <div class="grid-produtos" id="grid-produtos"></div>
-
-    <p class="mensagem-vazia" id="mensagem-vazia" style="display: none;">Nenhum produto encontrado.</p>
-
-    <p class="error-message" id="error-message" style="display: none;"></p>
-
-    <div class="paginacao" id="paginacao">
-
-      <button id="prev-page" disabled>Anterior</button>
-
-      <span id="page-info">Página 1</span>
-
-      <button id="next-page">Próxima</button>
-
-    </div>
-
-  </section>
-
-  <div class="social-links">
-
-    <a href="https://www.tiktok.com/@cdc.centraldecompras" target="_blank" rel="noopener noreferrer">
-
-      <div class="icon"><img src="logos/tiktok.png" alt="TikTok" loading="lazy" width="40" height="40"></div>
-
-      <span>TikTok</span>
-
-    </a>
-
-    <a href="https://www.instagram.com/cdccentrodecompras/" target="_blank" rel="noopener noreferrer">
-
-      <div class="icon"><img src="logos/Instagram.png" alt="Instagram" loading="lazy" width="40" height="40"></div>
-
-      <span>Instagram</span>
-
-    </a>
-
-    <a href="https://x.com/ComprasCdc" target="_blank" rel="noopener noreferrer">
-
-      <div class="icon"><img src="logos/X.png" alt="X" loading="lazy" width="40" height="40"></div>
-
-      <span>X</span>
-
-    </a>
-
-    <a href="https://www.youtube.com/channel/UCaKHlI-hWqwdAXS6Xsv3ZzA" target="_blank" rel="noopener noreferrer">
-
-      <div class="icon"><img src="logos/youtube.png" alt="YouTube" loading="lazy" width="40" height="40"></div>
-
-      <span>YouTube</span>
-
-    </a>
-
-  </div>
-
-  <a href="https://api.whatsapp.com/send?phone=5521975179737" class="whatsapp" target="_blank" rel="noopener noreferrer"> WhatsApp</a>
-
-  <a href="https://t.me/centraldecomprascdc" class="telegram" target="_blank" rel="noopener noreferrer"> Telegram</a>
-
-</main>  </div>
-
-
-
-  <div class="modal" id="imageModal">
-
-    <button class="modal-close" onclick="closeModal()">✕</button>
-
-    <div class="modal-content">
-
-      <div class="carrossel-imagens" id="modalCarrosselImagens"></div>
-
-      <button class="carrossel-prev" onclick="moveModalCarrossel(-1)">◄</button>
-
-      <button class="carrossel-next" onclick="moveModalCarrossel(1)"></button>
-
-      <div class="carrossel-dots" id="modalCarrosselDots"></div>
-
-    </div>
-
-  </div>
-
-
-
-  <footer>
-
-    <p> Todos os direitos reservados <strong>Grupo Centro de Compra "CdC"</strong> © <span id="year"></span></p>
-
-    <div class="credibilidade-nota">
-
-      <p><strong>Sobre credibilidade:</strong> É importante notar que esse site é apenas um portal de descontos e afiliado, não uma loja direta. Ele redireciona para plataformas terceiras. Verifique sempre se o cupom é válido diretamente na loja original, pois promoções podem expirar ou não se aplicar a certos produtos.</p>
-
-    </div>
-
-  </footer>
-
-
-
-  <div class="robo-assistente">
-
-    <a href="https://api.whatsapp.com/send?phone=5521975179737" target="_blank" rel="noopener noreferrer">
-
-      <img src="imagens/robo.jpg" alt="Robô Assistente" class="robo-imagem" loading="lazy" width="60" height="60">
-
-      <div class="robo-texto">Posso ajudar?</div>
-
-    </a>
-
-  </div>
-
-
-
-  <script defer src="script.js"></script>
-
+  <header class="site-header">
+    <div class="logo-container">
+      <a href="index.html">
+        <img src="logos/logoscentrodecompras.jpeg" alt="Centro de Compras" id="site-logo-img" width="150" height="50">
+      </a>
+    </div>
+    <div class="header-text">
+      <h1>Centro de Compra</h1>
+      <p>O maior portal de compras do Brasil! Encontre as melhores ofertas.</p>
+    </div>
+  </header>
+
+  <nav>
+    <a href="index">Promoções</a>
+    <a href="cupom">Cupom de Desconto</a>
+    <a href="sobre">Sobre</a>
+    <a href="contato">Contato</a>
+  </nav>
+
+  <div class="container">
+    <aside class="sidebar">
+      <h3>Categorias</h3>
+      <ul>
+        <li class="categoria-item ativa" data-categoria="todas" onclick="filtrarPorCategoria('todas')"><i class="fas fa-list mr-2"></i>Todas</li>
+        <li class="categoria-item" data-categoria="eletronicos" onclick="filtrarPorCategoria('eletronicos')"><i class="fas fa-laptop mr-2"></i>Eletrônicos</li>
+        <li class="categoria-item" data-categoria="moda" onclick="filtrarPorCategoria('moda')"><i class="fas fa-tshirt mr-2"></i>Moda</li>
+        <li class="categoria-item" data-categoria="fitness" onclick="filtrarPorCategoria('fitness')"><i class="fas fa-dumbbell mr-2"></i>Fitness</li>
+        <li class="categoria-item" data-categoria="casa" onclick="filtrarPorCategoria('casa')"><i class="fas fa-home mr-2"></i>Casa</li>
+        <li class="categoria-item" data-categoria="beleza" onclick="filtrarPorCategoria('beleza')"><i class="fas fa-magic mr-2"></i>Beleza</li>
+        <li class="categoria-item" data-categoria="esportes" onclick="filtrarPorCategoria('esportes')"><i class="fas fa-futbol mr-2"></i>Esportes</li>
+        <li class="categoria-item" data-categoria="livros" onclick="filtrarPorCategoria('livros')"><i class="fas fa-book mr-2"></i>Livros</li>
+        <li class="categoria-item" data-categoria="infantil" onclick="filtrarPorCategoria('infantil')"><i class="fas fa-baby mr-2"></i>Infantil</li>
+        <li class="categoria-item" data-categoria="celulares" onclick="filtrarPorCategoria('celulares')"><i class="fas fa-mobile-alt mr-2"></i>Celulares</li>
+        <li class="categoria-item" data-categoria="eletrodomesticos" onclick="filtrarPorCategoria('eletrodomesticos')"><i class="fas fa-blender mr-2"></i>Eletrodomésticos</li>
+        <li class="categoria-item" data-categoria="pet" onclick="filtrarPorCategoria('pet')"><i class="fas fa-paw mr-2"></i>Pet</li>
+        <li class="categoria-item" data-categoria="jardinagem" onclick="filtrarPorCategoria('jardinagem')"><i class="fas fa-leaf mr-2"></i>Jardinagem</li>
+        <li class="categoria-item" data-categoria="automotivo" onclick="filtrarPorCategoria('automotivo')"><i class="fas fa-car mr-2"></i>Automotivo</li>
+        <li class="categoria-item" data-categoria="gastronomia" onclick="filtrarPorCategoria('gastronomia')"><i class="fas fa-utensils mr-2"></i>Gastronomia</li>
+        <li class="categoria-item" data-categoria="games" onclick="filtrarPorCategoria('games')"><i class="fas fa-gamepad mr-2"></i>Games</li>
+      </ul>
+    </aside>
+
+    <main>
+      <section>
+        <h2>🛍️ Ofertas do Dia</h2>
+        <ins class="adsbygoogle"
+             style="display:inline-block;width:728px;height:90px"
+             data-ad-client="ca-pub-4531749081462125"
+             data-ad-slot="5690664546"></ins>
+        <script>
+             (adsbygoogle = window.adsbygoogle || []).push({});
+        </script>
+        <div class="lojas-parceiras">
+          <h3>🌟 Lojas Parceiras</h3>
+          <div class="grid-lojas">
+            <div class="loja-todas ativa" onclick="filtrarPorLoja('todas')"><span>Todas as Lojas</span></div>
+            <div class="loja" data-loja="amazon" onclick="filtrarPorLoja('amazon')">
+              <img src="logos/amazon.png" alt="Amazon" loading="lazy" width="100" height="40"><span>Amazon</span>
+            </div>
+            <div class="loja" data-loja="magalu" onclick="filtrarPorLoja('magalu')">
+              <img src="logos/magalu.png" alt="Magalu" loading="lazy" width="100" height="40"><span>Magalu</span>
+            </div>
+            <div class="loja" data-loja="shein" onclick="filtrarPorLoja('shein')">
+              <img src="logos/shein.png" alt="Shein" loading="lazy" width="100" height="40"><span>Shein</span>
+            </div>
+            <div class="loja" data-loja="shopee" onclick="filtrarPorLoja('shopee')">
+              <img src="logos/shopee.png" alt="Shopee" loading="lazy" width="100" height="40"><span>Shopee</span>
+            </div>
+            <div class="loja" data-loja="mercadolivre" onclick="filtrarPorLoja('mercadolivre')">
+              <img src="logos/mercadolivre.jpg" alt="Mercado Livre" loading="lazy" width="100" height="40"><span>Mercado Livre</span>
+            </div>
+            <div class="loja" data-loja="alibaba" onclick="filtrarPorLoja('alibaba')">
+              <img src="logos/alibaba.png" alt="Alibaba" loading="lazy" width="100" height="40"><span>Alibaba</span>
+            </div>
+          </div>
+        </div>
+        <input type="text" id="busca" placeholder="Busque por produtos..." class="barra-busca">
+        <div id="busca-feedback" class="busca-feedback"></div>
+        <div class="loading-spinner" id="loading-spinner"></div>
+        <div class="grid-produtos" id="grid-produtos"></div>
+        <p class="mensagem-vazia" id="mensagem-vazia" style="display: none;">Nenhum produto encontrado.</p>
+        <p class="error-message" id="error-message" style="display: none;"></p>
+        <div class="paginacao" id="paginacao">
+          <button id="prev-page" disabled>Anterior</button>
+          <span id="page-info">Página 1</span>
+          <button id="next-page">Próxima</button>
+        </div>
+      </section>
+      <div class="social-links">
+        <a href="https://www.tiktok.com/@cdc.centraldecompras" target="_blank" rel="noopener noreferrer">
+          <div class="icon"><img src="logos/tiktok.png" alt="TikTok" loading="lazy" width="40" height="40"></div>
+          <span>TikTok</span>
+        </a>
+        <a href="https://www.instagram.com/cdccentrodecompras/" target="_blank" rel="noopener noreferrer">
+          <div class="icon"><img src="logos/Instagram.png" alt="Instagram" loading="lazy" width="40" height="40"></div>
+          <span>Instagram</span>
+        </a>
+        <a href="https://x.com/ComprasCdc" target="_blank" rel="noopener noreferrer">
+          <div class="icon"><img src="logos/X.png" alt="X" loading="lazy" width="40" height="40"></div>
+          <span>X</span>
+        </a>
+        <a href="https://www.youtube.com/channel/UCaKHlI-hWqwdAXS6Xsv3ZzA" target="_blank" rel="noopener noreferrer">
+          <div class="icon"><img src="logos/youtube.png" alt="YouTube" loading="lazy" width="40" height="40"></div>
+          <span>YouTube</span>
+        </a>
+      </div>
+      <a href="https://api.whatsapp.com/send?phone=5521975179737" class="whatsapp" target="_blank" rel="noopener noreferrer">📲 WhatsApp</a>
+      <a href="https://t.me/centraldecomprascdc" class="telegram" target="_blank" rel="noopener noreferrer">📢 Telegram</a>
+    </main>
+  </div>
+
+  <div class="modal" id="imageModal">
+    <button class="modal-close" onclick="closeModal()">✕</button>
+    <div class="modal-content">
+      <div class="carrossel-imagens" id="modalCarrosselImagens"></div>
+      <button class="carrossel-prev" onclick="moveModalCarrossel(-1)">◄</button>
+      <button class="carrossel-next" onclick="moveModalCarrossel(1)">▶</button>
+      <div class="carrossel-dots" id="modalCarrosselDots"></div>
+    </div>
+  </div>
+
+  <footer>
+    <p>🔧 Todos os direitos reservados <strong>Grupo Centro de Compra "CdC"</strong> © <span id="year"></span></p>
+    <div class="credibilidade-nota">
+      <p><strong>Sobre credibilidade:</strong> É importante notar que esse site é apenas um portal de descontos e afiliado, não uma loja direta. Ele redireciona para plataformas terceiras. Verifique sempre se o cupom é válido diretamente na loja original, pois promoções podem expirar ou não se aplicar a certos produtos.</p>
+    </div>
+  </footer>
+
+  <div class="robo-assistente">
+    <a href="https://api.whatsapp.com/send?phone=5521975179737" target="_blank" rel="noopener noreferrer">
+      <img src="imagens/robo.jpg" alt="Robô Assistente" class="robo-imagem" loading="lazy" width="60" height="60">
+      <div class="robo-texto">Posso ajudar?</div>
+    </a>
+  </div>
+
+  <script defer src="script.js"></script>
 </body>
-
 </html>
