--- a/contato.html
+++ b/contato.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Contato - Central de Compras</title>
+  <title>Contato - Central de Compra</title>
   <style>
     body {
       font-family: 'Times New Roman', serif;
@@ -63,7 +63,7 @@
   </main>
 
   <footer>
-    <p>&copy; 2025 Central de Compras</p>
+    <p>&copy; 2025 Central de Compra</p>
   </footer>
 </body>
 </html>
