--- a/sobre.html
+++ b/sobre.html
@@ -47,7 +47,7 @@
   <main>
     <h2>Quem somos</h2>
     <p>
-      O <strong>Central de Compras</strong> é um portal criado para ajudar você a encontrar as melhores promoções e ofertas reais
+      O <strong>Central de Compra</strong> é um portal criado para ajudar você a encontrar as melhores promoções e ofertas reais
       nas maiores lojas do Brasil e do mundo. Trabalhamos com links seguros e atualizados de plataformas como Amazon, Magalu, Shopee, Shein, Mercado Livre e muito mais.
     </p>
 
@@ -63,7 +63,7 @@
   </main>
 
   <footer>
-    <p>&copy; 2025 Central de Compras - Todos os direitos reservados</p>
+    <p>&copy; 2025 Central de Compra - Todos os direitos reservados</p>
   </footer>
 </body>
 </html>
